fixed a styling issue with text on the search results page, corrected the route for the place page when coming out of the placepagesuggestions function in the getplaceinfo.mjs file, and set the city of the requested place within the learnmoreaboutplace function within the getplaceinfo.mjs file.

--- a/src/components/styles/Miami2.css
+++ b/src/components/styles/Miami2.css
@@ -188,6 +188,7 @@ border-radius: 7px;
 #budget-text p {
     position: absolute;
     margin-top: 0.6rem;
+    font-size: 1.5rem;
 } 
 #budget-f {
 position: absolute;
